# sjtrade

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test-deploy.yml  test.yml
sjtrade/: __init__.py  data.py  position.py  simulation_shioaji.py  stratage.py  strategy.py  trader.py  utils.py
sjtrade/io/: file.py
tests/: conftest.py  test_stratage.py  test_strategy.py  test_trader.py  test_utils.py
tests/io/: test_file.py
tutorial/: quickstart.ipynb
