[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sjtrade"
authors = [{name = "yvictor", email = "yvictor3141@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "shioaji>=0.3.4.dev7",
    "loguru",
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Home = "https://github.com/Yvictor/sjtrade"


[project.optional-dependencies]
test = [
    "black",
	"pytest>=7.1.2",
    "pytest-freezegun",
    "pytest-mock",
    "pytest-cov",
    "codecov",
]