[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sjtrade"
authors = [{name = "yvictor", email = "yvictor3141@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "shioaji>=1.0",
    "loguru",
    "rs2py",
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    Topic :: Office/Business :: Financial
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Home = "https://github.com/Yvictor/sjtrade"


[project.optional-dependencies]
test = [
    "black",
	"pytest>=7.1.2",
    "pytest-freezegun",
    "pytest-mock",
    "pytest-cov",
    "codecov",
]